<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree  </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>


    <string name="button_name">Click me</string>
    <string name="download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_button_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_button_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_button_name">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="no_download_selection">Please select the file to download</string>
    <string name="load_app">LoadApp</string>
    <string name="glide">Glide</string>
    <string name="retrofit">Retrofit</string>
    <string name="glide_description">Image Loading Library by BumpTech</string>
    <string name="retrofit_description">Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="load_app_description">Current repository by Udacity</string>
    <string name="channel_name">Downloads</string>
    <string name="channel_description">All notification related to downloads shown on this channel</string>
    <string name="channel_id">channel_downloads</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status: </string>
    <string name="fileName_description">%1$s - %2$s </string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="unknown">Unknown</string>


</resources>
