<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Transition
        app:autoTransition="animateToEnd"
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@id/start"
        app:duration="2000">
        <KeyFrameSet>
            <KeyAttribute
                app:framePosition="100"
                app:motionTarget="@id/fileName_textView">
                <CustomAttribute
                    app:attributeName="textColor"
                    app:customColorValue="#004349" />
            </KeyAttribute>

        </KeyFrameSet>
    </Transition>


    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/fileName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.0"
            android:text="@string/file_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0.0"
            android:text="@string/status"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/status_textView"
            app:layout_constraintStart_toStartOf="parent" />
        <Constraint
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:alpha="0.0"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <Constraint
            android:id="@+id/fileName_textView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.0"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/glide_button_text" />
        <Constraint
            android:id="@+id/status_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.0"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fileName_textView"
            app:layout_constraintTop_toBottomOf="@+id/fileName_textView"
            tools:text="Success" />
    </ConstraintSet>


    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/fileName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:alpha="1.0"
            android:text="@string/file_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:alpha="1.0"
            android:text="@string/status"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/status_textView"
            app:layout_constraintStart_toStartOf="parent" />
        <Constraint
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:alpha="1.0"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <Constraint
            android:id="@+id/fileName_textView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:alpha="1.0"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/glide_button_text" />
        <Constraint
            android:id="@+id/status_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:alpha="1.0"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fileName_textView"
            app:layout_constraintTop_toBottomOf="@+id/fileName_textView"
            tools:text="Success" />
    </ConstraintSet>
</MotionScene>